# newcam-proc

./: CMakeLists.txt
camCalib/: abStereo.yml
cmake/Modules/: FindBCM2835.cmake  FindGlib.cmake  FindLCM.cmake  FindLibbot.cmake  FindPvAPI.cmake  FindYamlCpp.cmake  lcmtypes.cmake  pythoninstall.cmake  pythonpathscript.cmake
doc/html/: ERDatabaseSystem_2ui_2mainwindow_8h_source.html  abstractdata_8h_source.html  abstracttoolbar_8h_source.html  adaptivelightfield_8h_source.html  adaptivelightfieldwidget_8h_source.html  adddialogxmlexcelcsv_8h_source.html  additemfirstnestedtabledialog_8h_source.html  addroidialog_8h_source.html  annotated.html  bioDatabase_2src_2greyifyer_8h_source.html  biodatabaseui_8h_source.html  boardlocations_8h_source.html  boardlocator_8h_source.html  buttoncolumndelegate_8h_source.html  calibrator2d_8h_source.html  calibrator3d_8h_source.html  cameraCal2_2src_2autosizeboard_8h_source.html  cameraCal2_2src_2cameracal_8h_source.html  cameraCalibration_2autosizeboard_8h_source.html  cameraCalibration_2imagelist_8h_source.html  cameraCalibration_2mainwindow_8h_source.html  classAbstractData-members.html  classAbstractData.html  classAbstractData__inherit__graph.map  classAbstractData__inherit__graph.md5  classAbstractToolbar-members.html  classAbstractToolbar.html  classAbstractToolbar__coll__graph.map  classAbstractToolbar__coll__graph.md5  classAbstractToolbar__inherit__graph.map  classAbstractToolbar__inherit__graph.md5  classAdaptiveLightfield-members.html  classAdaptiveLightfield.html  classAdaptiveLightfieldWidget-members.html  classAdaptiveLightfieldWidget.html  classAdaptiveLightfieldWidget__coll__graph.map  classAdaptiveLightfieldWidget__inherit__graph.md5  classAdaptiveLightfield__coll__graph.md5  classAdaptiveLightfield__inherit__graph.map  classBioDatabaseUI-members.html  (+579 more)
doc/latex/: annotated.tex  classAbstractData.tex  classAbstractData__inherit__graph.md5  classAbstractToolbar.tex  classAbstractToolbar__coll__graph.md5  classAbstractToolbar__inherit__graph.md5  classAdaptiveLightfield.tex  classAdaptiveLightfieldWidget.tex  classAdaptiveLightfieldWidget__inherit__graph.md5  classAdaptiveLightfield__inherit__graph.md5  classBioDatabaseUI.tex  classBioDatabaseUI__coll__graph.md5  classBoardLocations.tex  classBoardLocations__coll__graph.md5  classBoardLocator.tex  classBoardLocator__coll__graph.md5  classBoardLocator__inherit__graph.md5  classCameraCal.tex  classCameraCal__inherit__graph.md5  classColorCorrector.tex  classColorCorrector__coll__graph.md5  classERPreferencesDialog.tex  (+207 more)
include/: herc_acq_fired_report_t.h  herc_acq_herc_acq_status_t.h  herc_acq_hercbottle_state_t.h  herc_acq_hercbottle_switch_t.h  herc_acq_image_info_t.h  herc_acq_trigger_state_t.h  libcamlcm.h  senlcm_prosilica_attribute_t.h
src/: laserimage.cpp  laserimage.h
src/colorCorrector/: CMakeLists.txt
src/colorCorrector/main/: colorTest.cpp  main.cpp
src/colorCorrector/src/: adaptivelightfield.cpp  adaptivelightfield.h  histequalizer.cpp  histequalizer.h  lightfield.cpp  lightfield.h  lightfieldcorrector.cpp  lightfieldcorrector.h  rgbhsvstretch.cpp  rgbhsvstretch.h
src/colorCorrector/ui/: adaptivelightfieldwidget.cpp  adaptivelightfieldwidget.h  adaptivelightfieldwidget.ui  histeqwidget.cpp  histeqwidget.h  histeqwidget.ui  lightfieldwidget.cpp  lightfieldwidget.h  lightfieldwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  rgbhsvwidget.cpp  rgbhsvwidget.h  rgbhsvwidget.ui
src/libCam/: CMakeLists.txt  libcam.cpp  stereoprocessor.cpp  stereoprocessor.h
src/libCam/include/: abstractdata.cpp  abstractdata.h  cameracal.cpp  cameracal.h  colorcorrector.cpp  colorcorrector.h  featureops.cpp  featureops.h  image.cpp  image.h  imagelist.cpp  imagelist.h  imagelist.hpp  imageprocessor.cpp  imageprocessor.h  imagingwindow.cpp  imagingwindow.h  processor.h  prosilicaDrvTags.h  qimageview.cpp  qimageview.h  qtconversions.cpp  qtconversions.h  regions.h  stereocal.cpp  stereocal.h  stereoimage.cpp  stereoimage.h  stereolist.cpp  stereolist.h  stereoprocessor.cpp  stereoprocessor.h  stereostruct.h
src/libCam/qtinclude/: abstracttoolbar.cpp  abstracttoolbar.h  connectionbrowser.cpp  connectionbrowser.h  connectionmenu.cpp  connectionmenu.h  connectionmenu.ui  imagelabel.cpp  imagelabel.h  imagelistwidget.cpp  imagelistwidget.h  imagemanager.cpp  imagemanager.h  imagemanager.ui  stereolistwidget.cpp  stereolistwidget.h  stereolistwidget.ui  stereomanager.cpp  stereomanager.h  stereomanager.ui  stereotoolbar.cpp  stereotoolbar.h
(+68 files in other folders)
